src/styles/main.scss
@import 'compass/css3/border-radius';
@import 'compass/css3/text-shadow';
@import 'compass/css3/transform';
@import 'compass/css3/transition';
@import 'compass/css3/box-shadow';
@import 'compass/css3/box-sizing';
@import 'normalize';
@import 'solarized-dark';

$navy: hsl(224, 100%, 10%);
$offBlack: hsl(0, 0, 5%);

@mixin breakpoint($point) {
  @if $point == big-phone {
    @media (max-width: 1000px) { @content; }
  }
  @else if $point == small-phone {
    @media (max-width: 630px)  { @content; }
  }
}

$codeFont: Consolas, "Lucida Console", monospace;

@mixin mainShadow {
  @include box-shadow(0 0 3px 0 rgba(0, 0, 0, 0.5));
}

* {
  @include box-sizing(border-box);
}

html {
  background: hsl(0, 0%, 82%);
}

body {
  position: relative;
  max-width: 1600px;
  margin: 0 auto;
  font-family: helvetica neue, helvetica, sans-serif;
  font-size: 16px;
  background: $navy;
  color: $offBlack;
  @include mainShadow;
  @include breakpoint(big-phone) {
    font-size: 14px;
  }
}

header {
  position: relative;
  z-index: 101;
  width: 1000px;
  margin: 0 auto 700px;
  color: white;
  @include text-shadow(2px 2px black);
  @include breakpoint(small-phone) {
    width: 100%;
  }
}

.title {
  margin: 0;
  padding: 1.1em 0 .2em;
  text-align: center;
  font-size: 9em;
  @include breakpoint(small-phone) {
    font-size: 6em;
    padding-top: 0;
  }
}

.sub-title {
  position: relative;
  z-index: 101;
  margin: 0 0 0;
  font-size: 3em;
  text-align: center;
  @include breakpoint(small-phone) {
    font-size: 2em;
    padding: .5em;
  }
  a {
    text-decoration: none;
    color: #e58634;

    &:hover {
      text-decoration: underline;
    }
  }
}

.video-wrapper {
  margin: 0px 0px 60px;

  iframe {
    @include mainShadow;
    @include breakpoint(small-phone) {
      max-width: 100%;
      max-height: 200px;
    }
  }
}

.backdrop {
  position: fixed;
  max-width: 1600px;
  width: 100%;
  bottom: 0;
  z-index: 100;
}

.text-wrapper {
  background: white;
  padding: 10px 30px;
  @include mainShadow;
  @include breakpoint(small-phone) {
    padding: 20px 10px;
  }
}

.content-center {
  position: relative;
  z-index: 101;
  max-width: 780px;
  width: 92%;
  margin: 0 auto 2em;

  @include breakpoint(big-phone) {
    width: 92%;
    margin-left: 4%;
  }

  p {
    line-height: 1.6em;
    font-size: 1.2em;
  }

  .anchor {
    color: $offBlack;
  }

  a {
    color: #4183CD;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }
}

p code {
  background: hsl(240, 100%, 96%);
  border: 1px solid hsl(0, 0%, 90%);
  padding: 0 0.23em;
  font-size: .8em;
  @include border-radius(3px);
}

code {
  margin: 0;
  padding: 0;
  font-family: $codeFont;
}

pre {
  font-family: $codeFont;
  overflow: auto;
  white-space: pre;
}

.highlight, .cli-code {
  font-size: 1.1em;
  line-height: 1.5em;
  background: hsl(247, 14%, 11%);
  color: hsl(0, 0%, 73%);

  pre {
    padding: 25px;
  }
}

textarea {
  resize: none;
}

.cli-code {
  width: 100%;
  white-space: nowrap;
  overflow: auto;
  padding: 23px;
  line-height: 34px;
  font-family: monospace;
  height: 82px;
}

blockquote {
  border-left: 4px solid hsl(0, 0%, 87%);
  padding: 0 15px;
  color: hsl(0, 0%, 47%);
}

.theme-wrapper {
  width: 100%;
  margin: 30px 0;
  display: block;
  position: relative;
  cursor: pointer;
  border: 10px solid hsl(0, 0%, 54%);
  @include mainShadow;
}

.theme-img {
  width: 100%;
  float: right;
  @include mainShadow;
}

.ribbon-wrapper {
  overflow: hidden;
  position: absolute;
  top: 0;
  right: 0;
  height: 200px;
  width: 200px;
}

.github-ribbon {
  font-size: .8em;
  position: absolute;
  z-index: 101;
  top: 3.5em;
  right: -3.5em;
  padding: .6em 3.6em;
  font-weight: 700;
  background: #87172c;
  color: hsl(0, 100%, 100%);
  text-decoration: none;
  @include mainShadow;
  @include text-shadow(1px 1px black);
  @include transform( rotate(45deg));

  &:hover {
    text-decoration: underline;
  }

  @include breakpoint(small-phone) {
    display: none;
  }
}

// Clearfix
.group:after {
  content: "";
  display: table;
  clear: both;
}

